--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
-Docker/Docs/getting-started
+/home/fkurt/Murat/GstreamerWorks/Sunum/comp/video.mp4
+/home/fkurt/Murat/GstreamerWorks/Sunum/comp/deneme.mp4
